--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
-\SKIP_SETCAP = true
+SKIP_SETCAP = true
 disable_mlock = true
 
 listener "tcp" {
@@ -8,7 +8,7 @@ listener "tcp" {
 }
 
 storage "consul" {
-  address = "192.168.127.254:8500"  # Address of Consul cluster
+  address = "10.0.0.10:8500"  # Address of Consul cluster
   path    = "vault/"         # Prefix for Vault data in Consul KV store
 }
 
