--- a/config.json
+++ b/config.json
@@ -6,3 +6,7 @@ storage "consul" {
   path    = "vault/"         # Prefix for Vault data in Consul KV store
 }
 
+listener "tcp" {
+  address = ":8200"
+  tls_disable = 1
+}
